# trading-bot

./: .active_compound.json  .env.example  .final_if_audit.json  .final_verify.json  .gitignore  .if_fix_export.json  .if_fix_verify.json  .n8n_patched_workflows.json  .n8n_post_import_export.json  .n8n_verify_export.json  .n8n_workflows_after.json  .n8n_workflows_export.json  .tmp_k1_fixed.json  .tmp_k1_hybrid_live_n8n.json  .tmp_k1_hybrid_live_tradecraft.json  .tmp_k1_if_fix_n8n.json  .tmp_k1_if_fix_tradecraft.json  .tmp_k1_post_iffix_n8n.json  .tmp_k1_post_iffix_tradecraft.json  .tmp_n8n_k1.json  .tmp_parse_status.txt  .tmp_tradecraft_n8n_k1.json  3iMTcfFIzcvoj70N.json  BACKTEST_README.md  Dl752ZiX08XGHODK.json  Makefile  README.md  TO4H1aYz8xYeDHAa.json  activate.sql  activate_wf.js  all_after_if_fix.json  all_after_remove_cd.json  all_after_shape_fix.json  all_now.json  all_wf_after_final.json  all_workflows_check.json  backtestV1.csv  backtestV2.csv  backtestV2.generated.20260319_151654.csv  backtestV2.generated.csv  (+28 more)
backend/: Dockerfile  pyproject.toml
backend/.state/: ml_backfill_checkpoint.json
backend/app/: __init__.py  config.py  deps.py  llm_reasoning.py  main.py  trading_loop.py
backend/app/alerts/: __init__.py  email.py  telegram.py  whatsapp.py
backend/app/api/: __init__.py  admin.py  backtest.py  bot.py  market.py  mirofish.py  orders.py  paper.py  portfolio.py  risk.py  settings.py  signals.py  strategy.py  ws.py
backend/app/broker/: angelone_otp.py  base.py  paper.py  zerodha.py
backend/app/clients/: cognee_client.py  zerodha_client.py
backend/app/core/: __init__.py  baseline_metrics.py  feature_flags.py
backend/app/data/: fetcher.py  provider_nse.py  provider_yfinance.py
backend/app/data_ingestion/: institutional_flow.py  market_data_manager.py  options_data.py  sentiment_feed.py  stream_handler.py
backend/app/db/: session.py
backend/app/engine/: __init__.py  features.py  features_v2.py  model.py  policy.py  risk.py  rules.py  scheduler.py
backend/app/execution/: __init__.py  advanced_paper_broker.py  micro_timing.py  (+4 more)
backend/scripts/: reset_paper.py  train_model.py
backend/tests/: conftest.py  test_auth.py  test_data_ingestion_manager.py  test_features.py  test_features_v2.py  test_institutional.py  test_memory_service.py  test_orders.py  test_paper_broker.py  test_risk.py  test_strategy.py  test_stream_handler.py
(+248 files in other folders)
